[package]
name = "rust-detect-win-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
timer = "0.2.0"
windows = { version = "0.58.0", features = ["Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Power", "Win32_System_RemoteDesktop", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging"] }
